Colab kullanılarak oluşturuldu

--- a/dsa_project.ipynb
+++ b/dsa_project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMoorbh/pMPowDiwaBO5H2N",
+      "authorship_tag": "ABX9TyPaIZh+vA2QaU+vzNROAVL0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Null Hypothesis: There is no significant correlation between the difference in life expectancy between women and men and the happiness score of countries.\n",
+        "\n",
+        "Alternative Hypothesis: Countries where women live significantly longer than men tend to have higher happiness levels."
+      ],
+      "metadata": {
+        "id": "SdWcyZnEJlmy"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from google.colab import files\n",
@@ -36,7 +47,7 @@
       "metadata": {
         "id": "551hy4V2-3aO"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -48,7 +59,7 @@
       "metadata": {
         "id": "fCs5lavG-hg6"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -63,7 +74,7 @@
         "id": "KcZgpl7Y-6HP",
         "outputId": "801c7e46-d1fd-4fa4-bee1-1283f6d45118"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,7 +255,7 @@
         "id": "XyLpA9Ui_G4B",
         "outputId": "f1169713-11e4-48c9-c584-a87fd4222453"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,7 +484,7 @@
         "id": "6yVlD2eO_xNH",
         "outputId": "54313712-281f-4d59-d11f-4c42e59f1712"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -497,7 +508,7 @@
         "id": "Bdxv2A0dCrIi",
         "outputId": "e94b652d-1f87-4202-bf72-cbfaec2dacba"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -524,7 +535,7 @@
         "id": "yl1dpIx0KiYN",
         "outputId": "d48ed4c6-9948-4983-eaab-04559ecd4fda"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -556,7 +567,7 @@
         "id": "xTXbszt9ExJ_",
         "outputId": "46b14e0c-2fdd-4cec-b26f-ac22ca8a21a9"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -581,7 +592,7 @@
         "id": "vHuoLbq6KULa",
         "outputId": "7864689d-f0be-4993-c744-6032a4ba31ec"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -760,7 +771,7 @@
         "id": "mKw52rxIMwbI",
         "outputId": "b71751a2-e59a-4058-f80a-ee05b7c50aa3"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -797,7 +808,7 @@
         "id": "31rxSukIQEZu",
         "outputId": "feacfa36-3690-439a-b112-25a7f487dcad"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -833,7 +844,7 @@
         "id": "RHL7deGaTJBP",
         "outputId": "ebaab93a-1a8b-4f97-bfcc-6cdbb1d9de23"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -846,6 +857,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The Pearson correlation test specifically measures the strength and direction of a linear relationship between two variables. In this case, we want to see if there's a tendency for higher life expectancy differences to be associated with higher happiness scores so thats why pearson test is appropriate."
+      ],
+      "metadata": {
+        "id": "yO9FPA-hKj43"
+      }
     },
     {
       "cell_type": "code",
@@ -868,7 +888,7 @@
         "id": "38uxQ4d3OzK8",
         "outputId": "15f4cd0a-f5a9-4040-9d09-cab49ac16f0a"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
